--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "electron-vite build",
     "dev": "electron-vite dev --watch",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "lint:check": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "husky install && electron-builder install-app-deps",
+    "precommit": "yarn lint",
     "preview": "electron-vite preview",
     "start": "./dist/sc4-plugin-manager-1.0.0.exe",
     "typecheck": "yarn typecheck:node && yarn typecheck:web",
@@ -53,6 +56,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.3",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
