--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,9 @@
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
+        "argsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_",
+        "destructuredArrayIgnorePattern": "^_",
         "ignoreRestSiblings": true
       }
     ],
