--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.17",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.17",
+    "content-disposition": "^0.5.4",
     "electron-log": "^5.1.4",
     "electron-updater": "^6.1.7",
+    "immutability-helper": "^3.1.1",
     "isomorphic-git": "^1.25.10",
     "notistack": "^3.0.1",
     "react-virtualized-auto-sizer": "^1.0.24",
@@ -39,6 +42,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/content-disposition": "^0.5.8",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
