add precommit hook

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "build": "electron-vite build",
     "dev": "electron-vite dev --watch",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "lint:check": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
+    "lint:ci": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --max-warnings 0",
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
     "postinstall": "husky install && electron-builder install-app-deps",
