--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,11 +9,10 @@ files:
   - "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}"
   - "!{.env,.env.*,.npmrc,pnpm-lock.yaml}"
   - "!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}"
-win:
-  target: portable
 portable:
   artifactName: ${name}-${version}.${ext}
-npmRebuild: false
 publish:
-  provider: generic
-  url: https://example.com/auto-updates
+  provider: github
+win:
+  sign: ./src/sign.js
+  target: portable
