--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
         ELECTRON_CACHE: /root/.cache/electron
         ELECTRON_BUILDER_CACHE: /root/.cache/electron-builder
       volumes:
-        - ~/.cache/electron:/root/.cache/electron
-        - ~/.cache/electron-builder:/root/.cache/electron-builder
+        - /root/.cache/electron
+        - /root/.cache/electron-builder
     permissions:
       contents: write
     steps:
