Add log level env var

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,6 @@
 MAIN_VITE_GAME_DIR=""
 # Path to manager data (default is `${MAIN_VITE_GAME_DIR}\Manager`)
 MAIN_VITE_ROOT_DIR=""
+
+# Log level (default is `debug` in dev and `info` in prod)
+VITE_LOG_LEVEL=""
