--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "strict": true,
     "target": "esnext"
   },
+  "include": [],
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
 }
