--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,17 @@
 # Copy this file as `.env.local` and fill for your system
 
-# Path to your SimCity 4 data folder (default is `${My Documents}\SimCity 4`)
+# Data repository, either:
+#  - Git repository URL, e.g. https://github.com/memo33/sc4pac
+#  - Path to local Git clone (absolute, or relative to this directory)
+# Defaults to https://github.com/memo33/sc4pac
+MAIN_VITE_DATA_REPOSITORY=""
+# Data repository branch (defaults to main, ignored if `MAIN_VITE_DATA_REPOSITORY` is not an URL)
+MAIN_VITE_DATA_BRANCH=""
+
+# Path to your SimCity 4 data folder (defaults to `${My Documents}\SimCity 4`)
 MAIN_VITE_GAME_DIR=""
-# Path to manager data (default is `${MAIN_VITE_GAME_DIR}\Manager`)
+# Path to manager data (defaults to `${MAIN_VITE_GAME_DIR}\Manager`)
 MAIN_VITE_ROOT_DIR=""
 
-# Log level (default is `debug` in dev and `info` in prod)
+# Log level (defaults to `debug` in dev and `info` in prod)
 VITE_LOG_LEVEL=""
