--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,14 +3,13 @@ productName: sc4-plugin-manager
 directories:
   buildResources: build
 files:
-  - "!**/.vscode/*"
-  - "!src/*"
-  - "!electron.vite.config.{js,ts,mjs,cjs}"
-  - "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}"
-  - "!{.env,.env.*,.npmrc,pnpm-lock.yaml}"
-  - "!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}"
+  - build
+  - out
+  - package.json
+  - LICENSE
 portable:
   artifactName: ${name}-${version}.${ext}
+  splashImage: build/splash.bmp
 publish:
   provider: github
 win:
