--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "scripts": {
     "build": "electron-vite build",
     "dev": "electron-vite dev --watch",
-    "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "lint:ci": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --max-warnings 0",
+    "format": "prettier --ignore-path .gitignore --write .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
+    "lint:ci": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --max-warnings 0",
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
     "postinstall": "husky install && electron-builder install-app-deps",
