--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "build": "electron-vite build",
     "dev": "electron-vite dev --watch",
     "format": "prettier --ignore-path .gitignore --write .",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
-    "lint:ci": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --max-warnings 0",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore --max-warnings 0",
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
     "postinstall": "husky install && electron-builder install-app-deps",
