Simtropolis extraction script

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,3 +15,7 @@ MAIN_VITE_ROOT_DIR=""
 
 # Log level (defaults to `debug` in dev and `info` in prod)
 VITE_LOG_LEVEL=""
+
+# Simtropolis credentials for extraction scripts
+SIMTROPOLIS_IPS4_IPSSESSIONFRONT=""
+SIMTROPOLIS_IPS4_MEMBER_ID=""
