--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "build": "electron-vite build",
     "dev": "electron-vite dev --watch",
     "format": "prettier --ignore-path .gitignore --write .",
+    "index": "ts-node --project tsconfig.scripts.json src/scripts/simtropolis.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore --max-warnings 0",
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
     "postinstall": "husky install && electron-builder install-app-deps",
     "precommit": "yarn lint-staged",
     "preview": "electron-vite preview",
-    "typecheck": "yarn typecheck:node && yarn typecheck:web",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false"
+    "typecheck": "yarn typecheck:main && yarn typecheck:renderer && yarn typecheck:scripts",
+    "typecheck:main": "tsc --noEmit -p tsconfig.main.json --composite false",
+    "typecheck:renderer": "tsc --noEmit -p tsconfig.renderer.json --composite false",
+    "typecheck:scripts": "tsc --noEmit -p tsconfig.scripts.json --composite false"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -59,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv": "^16.4.5",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-vite": "^2.0.0",
@@ -70,9 +73,11 @@
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.5",
+    "node-html-parser": "^6.1.13",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
