--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,15 @@
     "target": "esnext"
   },
   "include": [],
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
+  "references": [
+    {
+      "path": "./tsconfig.main.json"
+    },
+    {
+      "path": "./tsconfig.renderer.json"
+    },
+    {
+      "path": "./tsconfig.scripts.json"
+    }
+  ]
 }
