--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "electron-vite build",
     "dev": "electron-vite dev --watch",
     "format": "prettier --ignore-path .gitignore --write .",
-    "index": "ts-node --project tsconfig.scripts.json src/scripts/simtropolis.ts",
+    "indexer": "ts-node --project tsconfig.scripts.json -r tsconfig-paths/register src/scripts/simtropolis/indexer.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore --max-warnings 0",
     "make": "yarn build && yarn package",
     "package": "electron-builder --win",
@@ -78,6 +78,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
   }
