--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -1,11 +1,18 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["electron.vite.config.*", "src/common/**/*", "src/main/**/*", "src/preload/**/*"],
+  "include": [
+    "electron.vite.config.*",
+    "src/common/**/*",
+    "src/main/**/*",
+    "src/node/**/*",
+    "src/preload/**/*"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "types": ["electron-vite/node"],
     "paths": {
       "@common/*": ["src/common/*"],
+      "@node/*": ["src/node/*"],
       "@utils/*": ["src/main/utils/*"]
     }
   }
