Categories and translations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -83,6 +83,12 @@
       {
         "allow": ["debug", "error", "info", "warn"]
       }
+    ],
+    "sort-imports": [
+      "warn",
+      {
+        "ignoreDeclarationSort": true
+      }
     ]
   },
   "settings": {
