--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "electron-log": "^5.1.4",
     "escape-html": "^1.0.3",
     "glob": "^10.4.1",
+    "i18next": "^23.11.5",
     "immutability-helper": "^3.1.1",
     "isomorphic-git": "^1.25.10",
     "notistack": "^3.0.1",
+    "react-i18next": "^14.1.2",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
     "unzipper": "^0.11.6",
