--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
       - name: Run ESLint
-        run: yarn lint:ci
+        run: yarn lint
       - name: Run TypeScript
         run: yarn typecheck
       - name: Build application
