--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,10 @@
 # Copy this file as `.env.local` and fill for your system
 
 # Data repository, either:
-#  - Git repository URL, e.g. https://github.com/memo33/sc4pac
+#  - Git repository URL, e.g. https://github.com/Salinco96/sc4-plugin-manager-data
 #  - Path to local Git clone (absolute, or relative to this directory)
-# Defaults to https://github.com/memo33/sc4pac
+# Defaults to `https://github.com/Salinco96/sc4-plugin-manager-data` in production
+# Defaults to `sc4-plugin-manager-data` in development
 MAIN_VITE_DATA_REPOSITORY=""
 # Data repository branch (defaults to main, ignored if `MAIN_VITE_DATA_REPOSITORY` is not an URL)
 MAIN_VITE_DATA_BRANCH=""
