--- a/.env.local.example
+++ b/.env.local.example
@@ -20,3 +20,10 @@ VITE_LOG_LEVEL=""
 # Simtropolis credentials for extraction scripts
 SIMTROPOLIS_IPS4_IPSSESSIONFRONT=""
 SIMTROPOLIS_IPS4_MEMBER_ID=""
+
+# Absolute path to indexer downloads
+INDEXER_DOWNLOADS_PATH=""
+
+# Absolute path to indexer tools
+INDEXER_EXE_PATH_CICDEC=""
+INDEXER_EXE_PATH_7Z=""
