Markdown description and images

--- a/src/scripts/data/assets/simtropolis/107-utilities.yaml
+++ b/src/scripts/data/assets/simtropolis/107-utilities.yaml
@@ -3404,7 +3404,7 @@ assets:
       - metarvo
     category: 500
     lastModified: 2016-08-27T13:27:53Z
-    name: "Metarvo’s Power Pole Pack (P3) Set 0: Texas Steel V-Tower"
+    name: "Metarvo's Power Pole Pack (P3) Set 0: Texas Steel V-Tower"
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2016_08/p3pic069.thumb.jpg.c9e5db933c3c48db438a65ac1439bf68.jpg
     url: https://community.simtropolis.com/files/file/31264-metarvo%E2%80%99s-power-pole-pack-p3-set-0-texas-steel-v-tower/
   simtropolis/31265-metarvo%E2%80%99s-power-pole-pack-p3-set-1-wood-h-frame:
@@ -3412,7 +3412,7 @@ assets:
       - metarvo
     category: 500
     lastModified: 2016-08-27T13:27:02Z
-    name: "Metarvo’s Power Pole Pack (P3) Set 1: Wood H-Frame"
+    name: "Metarvo's Power Pole Pack (P3) Set 1: Wood H-Frame"
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_2016_08/p3pic071.thumb.jpg.6be6d115b775e5f83421bd03e59d1eaa.jpg
     url: https://community.simtropolis.com/files/file/31265-metarvo%E2%80%99s-power-pole-pack-p3-set-1-wood-h-frame/
   simtropolis/31267-electrical-substation:
@@ -4744,4 +4744,4 @@ assets:
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2003/thumb-0dc48ffa24d273347ad085ec0439ad86-day.JPG
     url: https://community.simtropolis.com/files/file/983-hydro-electric-dam/
 
-timestamp: 2024-06-27T08:54:31.584Z
+timestamp: 2024-07-03T09:08:15.228Z
