--- a/package.json
+++ b/package.json
@@ -46,19 +46,25 @@
     "isomorphic-git": "^1.25.10",
     "notistack": "^3.0.1",
     "react-i18next": "^14.1.2",
+    "react-markdown": "^9.0.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
+    "remark-gfm": "^4.0.0",
     "unzipper": "^0.11.6",
     "yaml": "^2.4.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@joplin/turndown": "^4.0.73",
+    "@joplin/turndown-plugin-gfm": "^1.0.55",
     "@types/content-disposition": "^0.5.8",
     "@types/escape-html": "^1",
     "@types/node": "^18.19.9",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-window": "^1.8.8",
+    "@types/turndown": "^5.0.4",
     "@types/unzipper": "^0.10.9",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
