--- a/src/scripts/data/assets/simtropolis/104-agricultural.yaml
+++ b/src/scripts/data/assets/simtropolis/104-agricultural.yaml
@@ -107,10 +107,38 @@ assets:
     authors:
       - SimGoober
     category: 410
-    lastModified: 2005-11-14T07:20:59Z
+    dependencies: []
+    description: >-
+      <body>
+                                  
+      								<div style="position:absolute; top:0px; right:0px;">
+                                        <img _title="This is a Popular File" alt="" class="ipsImage" data-ipstooltip="" src="https://www.simtropolis.com/library/misc/big-heart-icon.png" style="" width="34" height="53">
+      								</div>
+
+      							
+
+      							
+      <center><strong><abbr title="BATT Squad Certification">BSC</abbr> Irrigation Canal System</strong></center>
+
+      <br><p><font size="1">While playing some farming regions, I thought they would be more realistic with some tree lined canals going between them. So I decided to build some! With the help and
+      input of several other <abbr title="BATT Squad Certification">BSC</abbr> members, we came up with a series that should cover all the bases.</font></p>
+
+      <p><font size="1">Custom Features : Query, Menu Icon</font></p>
+
+      <p><font size="1">There are a total of 19 lots. These all work in conjunction with each other to give you a seemless water supply for your farms. There are numerous 1x1 lots, with the canals in
+      various configurations. There are also some ponds, a reservoir and a few irrigation style dams. The dams are side areas where water can be stored for individual farm use, as described to me by a
+      couple RW farmers. The dams and reservoir supply a small water source, as does a small wind driven pump on the canal system itself.<br>All lots are modded to be as neutral as possible to the
+      game, no park effects or anything to raise the property values around them and kill off the farms. They cost about </font></p>
+
+      						</body>
+    images:
+      - https://www.simtropolis.com/objects/screens/0019/afc4d79fc02b9f01efc4d4ca36c91d28-BSC_SG_IrrigationCanals01.jpg
+      - https://www.simtropolis.com/objects/screens/0019/afc4d79fc02b9f01efc4d4ca36c91d28-BSC_SG_IrrigationCanals02.jpg
+    lastModified: 2024-08-12T00:04:35Z
     name: BSC Irrigation Canal Set
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_11_2005/thumb-afc4d79fc02b9f01efc4d4ca36c91d28-BSC_SG_IrrigationCanals01.jpg
     url: https://community.simtropolis.com/files/file/11103-bsc-irrigation-canal-set/
+    version: OBSOLETE
   simtropolis/11171-jbm-sunflower-farm:
     authors:
       - Mary Maurine Mayo
@@ -2432,4 +2460,4 @@ assets:
     thumbnail: https://www.simtropolis.com/objects/screens/monthly_08_2003/thumb-72c64c05c6bd3deddb1f3b260797d16f-SC4%20Vineyards.JPG
     url: https://community.simtropolis.com/files/file/973-imperial-vineyard-estate/
 
-timestamp: 2024-07-30T08:53:33.543Z
+timestamp: 2024-08-13T13:48:06.421Z
