--- a/src/scripts/data/assets/sc4evermore/42-dll-mods.yaml
+++ b/src/scripts/data/assets/sc4evermore/42-dll-mods.yaml
@@ -3,7 +3,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 90
+    downloads: 93
     lastModified: 2024-03-22T02:11:41-07:00
     name: SC4 Disable Cheats DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/251-sc4-disable-cheats-dll-plugin
@@ -11,7 +11,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 96
+    downloads: 97
     lastModified: 2024-03-22T02:23:30-07:00
     name: Humane Society Ordinance DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/252-humane-society-ordinance-dll-plugin
@@ -19,7 +19,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 105
+    downloads: 107
     lastModified: 2024-03-22T02:26:02-07:00
     name: Legalize Gambling Ordinance Upgrade DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/253-legalize-gambling-ordinance-upgrade-dll-plugin
@@ -27,7 +27,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 89
+    downloads: 90
     lastModified: 2024-03-22T02:29:25-07:00
     name: SC4CityDateSync DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/254-sc4citydatesync-dll-plugin
@@ -35,7 +35,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 109
+    downloads: 111
     lastModified: 2024-03-22T02:33:20-07:00
     name: SC4MoreDemandInfo DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/255-sc4moredemandinfo-dll-plugin
@@ -43,7 +43,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 105
+    downloads: 107
     lastModified: 2024-03-22T02:37:05-07:00
     name: SC4AutoSave DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/256-sc4autosave-dll-plugin
@@ -51,7 +51,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 82
+    downloads: 83
     lastModified: 2024-03-22T02:58:58-07:00
     name: SC4DisableDemolitionAnimation DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/257-sc4disabledemolitionanimation-dll-plugin
@@ -59,7 +59,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 117
+    downloads: 119
     lastModified: 2024-03-22T03:04:18-07:00
     name: SC4 Full Screen 32-bit Color DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/258-sc4-full-screen-32-bit-color-dll-plugin
@@ -67,7 +67,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 161
+    downloads: 167
     lastModified: 2024-03-22T03:03:31-07:00
     name: SC4GraphicsOptions DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/259-sc4graphicsoptions-dll-plugin
@@ -75,7 +75,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 106
+    downloads: 109
     lastModified: 2024-03-22T03:37:07-07:00
     name: Allow More Building Styles DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/260-allow-more-building-styles-dll-plugin
@@ -83,7 +83,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 117
+    downloads: 119
     lastModified: 2024-03-22T03:41:54-07:00
     name: SC4CPUOptions DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/261-sc4cpuoptions-dll-plugin
@@ -91,7 +91,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 102
+    downloads: 103
     lastModified: 2024-03-22T03:49:58-07:00
     name: SC4DisableLotPlopSmoke DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/262-sc4disablelotplopsmoke-dll-plugin
@@ -99,7 +99,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 75
+    downloads: 76
     lastModified: 2024-03-22T03:47:13-07:00
     name: SC4DisableNetworkConstructionSounds
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/263-sc4disablenetworkconstructionsounds
@@ -107,7 +107,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 125
+    downloads: 128
     lastModified: 2024-03-22T03:48:55-07:00
     name: Region View Census UI DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/264-region-view-census-ui-dll-plugin
@@ -115,7 +115,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 292
+    downloads: 305
     lastModified: 2024-03-22T03:57:09-07:00
     name: No Kickout Lower Wealth DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/265-no-kickout-lower-wealth-dll-plugin
@@ -123,7 +123,7 @@ assets:
     authors:
       - null45
     category: 60
-    downloads: 130
+    downloads: 132
     lastModified: 2024-03-22T03:58:56-07:00
     name: Growify Plopped Buildings Cheat DLL Plugin
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/266-growify-plopped-buildings-cheat-dll-plugin
@@ -131,11 +131,110 @@ assets:
     authors:
       - memo
     category: 60
-    downloads: 262
+    dependencies:
+      - simtropolis/36242-resource-loading-hooks-dll-for-simcity-4
+    description: "<body>\r
+
+      \        <div class=\"jd_description_wrapper jd_clear\"><p>A DLL plugin for SimCity 4 that</p>\r
+
+      <ul>\r
+
+      <li>enables submenu functionality: This DLL is a dependency for other submenu-compatible plugins.</li>\r
+
+      <li>adds a number of standard submenus such as Plazas, Green Spaces, Sports.</li>\r
+
+      <li>fixes the game's menu rendering issues caused by duplicate or missing menu icons.</li>\r
+
+      <li>implements Exemplar Patching functionality</li>\r
+
+      </ul>\r
+
+      <p><strong>System requirements</strong></p>\r
+
+      <ul>\r
+
+      <li>SimCity 4, version 1.1.641 (the digital release) (<a
+      href=\"https://community.simtropolis.com/forums/topic/762980-the-future-of-sc4-modding-the-matter-of-digital-vs-disc-and-windows-vs-macos-in-the-dll-era/\" rel=\"\">more info</a>)</li>\r
+
+      <li>Windows 7+ or Linux</li>\r
+
+      </ul>\r
+
+      <p><strong>Dependencies</strong></p>\r
+
+      <ul>\r
+
+      <li><a href=\"https://community.simtropolis.com/files/file/36242-resource-loading-hooks-dll-for-simcity-4/\" rel=\"\">SC4ResourceLoadingHooks DLL</a> by Null 45</li>\r
+
+      </ul>\r
+
+      <p><strong>Installation</strong></p>\r
+
+      <ul>\r
+
+      <li>Copy the DLLs into the top-level directory of either Plugins folder (place it directly in <span style=\"background-color: #ced4d9;\">&lt;Documents&gt;SimCity 4Plugins</span> or <span
+      style=\"background-color: #ced4d9;\">&lt;SC4 install folder&gt;Plugins</span>, not in a subfolder).</li>\r
+
+      <li>Copy the file <span style=\"background-color: #ced4d9;\">submenu-essentials.dat</span> and optionally the individual submenu files anywhere into your Plugins folder. You may skip installing
+      an optional submenu if it contains neither Flora nor any sub-submenus. In that case, the buildings of that submenu will appear in the default top-level menu instead.</li>\r
+
+      </ul>\r
+
+      <p>Alternatively, the mod can be installed with Sc4pac: <a href=\"https://memo33.github.io/sc4pac/channel/?pkg=memo:submenus-dll\" target=\"_blank\" rel=\"external nofollow
+      noopener\">memo:submenus-dll</a></p>\r
+
+      <p><strong>Credits</strong></p>\r
+
+      <ul>\r
+
+      <li>Submenu icons created by <a contenteditable=\"false\" href=\"https://community.simtropolis.com/profile/789206-panda/\" rel=\"\" data-ipshover=\"\"
+      data-ipshover-target=\"https://community.simtropolis.com/profile/789206-panda/?do=hovercard\" data-mentionid=\"789206\">@Panda</a></li>\r
+
+      <li>Exemplar Patching implemented in collaboration with <a id=\"ips_uid_4285_4\" contenteditable=\"false\" href=\"https://community.simtropolis.com/profile/246111-null-45/\" rel=\"\"
+      data-ipshover=\"\" data-ipshover-target=\"https://community.simtropolis.com/profile/246111-null-45/?do=hovercard\" data-mentionid=\"246111\">@Null 45</a></li>\r
+
+      </ul>\r
+
+      <p><strong>Further information</strong></p>\r
+
+      <ul>\r
+
+      <li>The DLL dynamically creates new submenus by checking for some new exemplar properties, for example in the building exemplars of ploppable lots. This allows anyone to create additional
+      submenus for their lot sets. The modding details are described in the <a href=\"https://github.com/memo33/submenus-dll\" target=\"_blank\" rel=\"external nofollow noopener\">Readme
+      file</a>.</li>\r
+
+      <li>List of <a href=\"https://github.com/memo33/submenus-dll/tree/main?tab=readme-ov-file#standard-submenus\" target=\"_blank\" rel=\"external nofollow noopener\">Standard Submenus</a> added by
+      this mod.</li>\r
+
+      <li>Simtropolis <a href=\"https://community.simtropolis.com/forums/topic/763010-submenus-dll/\" rel=\"\">discussion thread</a></li>\r
+
+      </ul> </div>\r
+
+      \        <div class=\"jd_preview\" style=\"\"></div>\r
+
+      \        <div class=\"jd_preview\" style=\"\"></div>\r
+
+      \        <div class=\"jd_screenshot_zone jd_clear\" style=\"\">\r
+
+      \            <span class=\"jd_screenshot\"><a href=\"https://www.sc4evermore.com/images/jdownloads/screenshots/glr-submenu.jpeg\" data-lightbox=\"lightbox268\" data-alt=\"lightboxglr-submenu.\"
+      target=\"_blank\"><img class=\"jd_image-left\" src=\"https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/glr-submenu.jpeg\" alt=\"glr-submenu.\" ></a> </span>\r
+
+      \            <span class=\"jd_screenshot\"> </span>\r
+
+      \            <span class=\"jd_screenshot\"> </span>\r
+
+      \        </div> \r
+
+      </body>"
+    downloads: 269
+    images:
+      - https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/glr-submenu.jpeg
     lastModified: 2024-05-12T10:59:16-07:00
     name: Submenus DLL Plugin
+    repository: https://github.com/memo33/submenus-dll
     thumbnail: https://www.sc4evermore.com/images/jdownloads/screenshots/thumbnails/glr-submenu.jpeg
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/268-submenus-dll-plugin
+    version: 1.1.2
   sc4evermore/273-dgvoodoo-2-sc4-edition:
     authors:
       - sc4evermore
@@ -195,7 +294,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 207
+    downloads: 211
     filename: DgVoodoo 2 SC4 Version.zip
     files:
       - DgVoodoo 2 SC4 Version/3c - NVIDIA GPU Fix.txt
@@ -291,7 +390,7 @@ assets:
       \        </div> \r
 
       </body>"
-    downloads: 295
+    downloads: 308
     images: []
     lastModified: 2024-06-19T03:57:16-07:00
     name: SC4Fix
@@ -299,4 +398,4 @@ assets:
     url: https://www.sc4evermore.com/index.php/downloads/download/42-dll-mods/278-sc4fix
     version: "8"
 
-timestamp: 2024-08-13T13:48:06.421Z
+timestamp: 2024-08-19T05:43:53.512Z
